# encoded-reasoning

./: .gitignore  README.md  new_prompt.txt  pyproject.toml  requirements.txt  run_qwen8b_judge_w_flash.sh  run_w_flash.sh  run_w_sonnet.sh
cot_quality_metrics/: CLAUDE.md  README.md  main.py  test_all_rubrics.py  test_gemini.py
cot_quality_metrics/data/: sample_cot.txt
cot_quality_metrics/docs/: inspect_ai_conversion_notes.md  planning_doc.md  rubric_catalog.md
cot_quality_metrics/outputs/: full_evaluation.json
cot_quality_metrics/prompts/: 01_noticing_confusion.md  02_live_updating.md  03_discriminative_experiment_design.md  04_appropriate_stopping.md  05_generativity_under_stuckness.md  06_error_metabolism.md  07_calibration.md  08_problem_decomposition.md  09_assumption_surfacing.md  10_negative_space_awareness.md  11_authenticity.md  12_contact_with_reality.md  13_process_conclusion_integrity.md  14_sufficiency_of_investigation.md  15_provenance_transparency.md  16_motivated_cognition.md  17_complexity_theater.md  18_cargo_cult_methodology.md  19_premature_formalization.md  20_intellectual_flinching.md  21_too_direct_path.md  (+20 more)
testing_on_server/: README.md  analyze_cot_prefill.py  cot_generation.py  cot_prefill_experiment.py  run_experiments.sh
week_1/: construct_rollouts.py  construct_rollouts_noise.py  construct_task_vector.py  evaluate_best_of_n.py  evaluate_steering_vector.py  noise_to_activations.py  requirements.txt  run_best_of_n_sweep.sh  run_construct_rollouts_all_alphas.sh  run_eval_sweep.sh  run_gepa_arithmetic.py  run_gepa_reflection_sweep.sh
(+35 files in other folders)
