[project]
name = "cot-quality-metrics"
version = "0.1.0"
description = "Evaluate Chain of Thought reasoning quality using 32 rubrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "inspect-ai>=0.3.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.14.0",
    "openai>=2.16.0",
]

[project.scripts]
cot-evaluate = "cot_quality_metrics.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cot_quality_metrics/src/cot_quality_metrics"]
