[project]
name = "encoded-reasoning"
version = "0.1.0"
description = "Steering vectors for Qwen3-VL reasoning"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "pillow",
    "numpy",
    "scipy",
    "accelerate",
    "transformers @ git+https://github.com/huggingface/transformers.git",
]

[tool.uv]
package = false
